started work on gameUI.js and working to edit the submit button action.

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
       <div>
         <div">
           <hr>
-          <form id="order">
+          <form id="game-setup">
             <h2>Feed the beer to prevent being eaten!</h2>
             <div class="form-group sizing">
               <label for="name">Bear's Name</label>
@@ -34,11 +34,11 @@
               </div>
 
 
-              <button type="submit" class="btn-primary">Play game!</button>
+              <button type="" class="btn-primary">Play game!</button>
               <div id="balance">
                 <br>
                 <h2>
-                  <label for="current-total">Current Total</label>
+                  <label for="current-total">Current Hunger</label>
                   <input type="text" id="current-total">
                 </h2>
                 <br>
