--- a/src/index.html
+++ b/src/index.html
@@ -34,12 +34,12 @@
               </div>
 
 
-              <button type="" class="btn-primary">Play game!</button>
+              <button type="submit" id="test" class="btn-primary">Play game!</button>
               <div id="balance">
                 <br>
                 <h2>
                   <label for="current-total">Current Hunger</label>
-                  <input type="text" id="current-total">
+                  <input type="text" id="current-hunger">
                 </h2>
                 <br>
                 <h3>Transaction History:</h3>
