finally got the counter to show in the current hunger input. Started work on difficulty options with different interval counters.

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,9 @@
               </div>
 
 
-              <button type="submit" id="test" class="btn-primary">Play game!</button>
+              <button type="submit" id="test" class="btn-primary">Play game</button>
+              <button type="" id="feed" class="btn-primary">Feed the Bear</button>
+
               <div id="balance">
                 <br>
                 <h2>
