--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
             </div>
             <div class="form-group sizing">
               <label for="exampleFormControlSelect1">Difficulty Level</label>
-              <select class="form-control" id="pizza-size">
+              <select class="form-control" id="difficulty-level">
                 <option>Easy</option>
                 <option>Normal</option>
                 <option>Hard</option>
