--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
             <div class="form-group" id="toppings">
               <div class="form-check form-check-inline">
                 <input class="form-check-input" type="checkbox"
-                  id="inlineCheckbox1" value="pepperoni">
+                  id="hardcore-mode" value="">
                 <label class="form-check-label" for="inlineCheckbox1">Hardcore
                   Mode</label>
               </div>
