added axios to project for giphy api when game is lost or won.

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
         <div">
           <hr>
           <form id="game-setup">
-            <h2>Feed the beer to prevent being eaten!</h2>
+            <h2>Feed the bear to prevent being eaten!</h2>
             <div class="form-group sizing">
               <label for="name">Bear's Name</label>
               <input type="text" class="form-control" id="name">
@@ -36,7 +36,6 @@
 
               <button type="submit" id="test" class="btn-primary">Play game</button>
               <button type="" id="feed" class="btn-primary">Feed the Bear</button>
-
               <div id="balance">
                 <br>
                 <h2>
