--- a/src/index.html
+++ b/src/index.html
@@ -13,11 +13,11 @@
           <hr>
           <form id="game-setup">
             <h2>Feed the bear to prevent being eaten!</h2>
-            <div class="form-group sizing">
+            <div class="form-group sizing hide">
               <label for="name">Bear's Name</label>
               <input type="text" class="form-control" id="name">
             </div>
-            <div class="form-group sizing">
+            <div class="form-group sizing hide">
               <label for="exampleFormControlSelect1">Difficulty Level</label>
               <select class="form-control" id="difficulty-level">
                 <option>Easy</option>
@@ -25,25 +25,24 @@
                 <option>Hard</option>
               </select>
             </div>
-            <div class="form-group" id="toppings">
-              <div class="form-check form-check-inline">
+            <div class="form-group">
+              <div class="form-check form-check-inline hide">
                 <input class="form-check-input" type="checkbox"
-                  id="hardcore-mode" value="">
+                  id="hardcore-mode" class="hide" value="">
                 <label class="form-check-label" for="inlineCheckbox1">Hardcore
                   Mode</label>
               </div>
 
 
-              <button type="submit" id="test" class="btn-primary">Play game</button>
-              <button type="" id="feed" class="btn-primary">Feed the Bear</button>
+              <button type="submit" id="test" class="btn-primary hide">Play game</button>
               <div id="balance">
+                <button type="" id="feed" class="btn-primary">Feed the Bear</button>
                 <br>
                 <h2>
                   <label for="current-total">Current Hunger</label>
                   <input type="text" id="current-hunger">
                 </h2>
                 <br>
-                <h3>Transaction History:</h3>
                 <br>
 
               </div>
